[gd_scene load_steps=2 format=3 uid="uid://cvyb11qlc74oa"]

[ext_resource type="Script" uid="uid://c3yaekjf2ar1l" path="res://Scripts/FunctionVisualizer/FunctionVariableInputEdit.gd" id="1_odljc"]

[node name="FunctionVariableInput" type="Control"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_odljc")

[node name="Layout" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="NameInput" type="LineEdit" parent="Layout"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2

[node name="ValueInput" type="LineEdit" parent="Layout"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="ValueSlider" type="HSlider" parent="Layout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="MinValueInput" type="LineEdit" parent="Layout"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="MaxValueInput" type="LineEdit" parent="Layout"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
